logs/validate.20260327-113614.log
error[E0277]: `T` cannot be shared between threads safely
   --> src/Chap36/QuickSortMtEphSlice.rs:543:68
    |
543 |             let Pair(sorted_left, sorted_right) = crate::ParaPair!(f1, f2);
    |                                                                    ^^ `T` cannot be shared between threads safely
    |
   ::: src/ParaPairs.rs:105:9
    |
105 |         $crate::ParaPairs::ParaPairs::para_pair($f1, $f2)
    |         --------------------------------------- required by a bound introduced by this call
    |
note: required because it appears within the type `std::marker::PhantomData<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/marker.rs:819:11
note: required because it appears within the type `alloc::raw_vec::RawVec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/raw_vec/mod.rs:73:18
note: required because it appears within the type `std::vec::Vec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/vec/mod.rs:440:11
    = note: required for `std::sync::Arc<std::vec::Vec<T>>` to implement `std::marker::Send`
note: required because it appears within the type `Chap19::ArraySeqMtEphSlice::ArraySeqMtEphSlice::ArraySeqMtEphSliceS<T>`
   --> src/Chap19/ArraySeqMtEphSlice.rs:53:16
    |
 53 |     pub struct ArraySeqMtEphSliceS<T> {
    |                ^^^^^^^^^^^^^^^^^^^
note: required because it's used within this closure
   --> src/Chap36/QuickSortMtEphSlice.rs:519:22
    |
519 |             let f1 = move || -> (r: Vec<T>)
    |                      ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ParaPairs::ParaPairs::para_pair`
   --> src/ParaPairs.rs:61:33
    |
 59 |     pub fn para_pair<A, B, F1, F2>(f1: F1, f2: F2) -> (pair: Pair<A, B>)
    |            --------- required by a bound in this function
 60 |         where
 61 |             F1: FnOnce() -> A + Send + 'static,
    |                                 ^^^^ required by this bound in `para_pair`
help: consider further restricting type parameter `T` with trait `Sync`
    |
278 |     impl<T: TotalOrder + Eq + Clone + Send + 'static + std::marker::Sync> QuickSortMtEphSliceTrait<T>
    |                                                      +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> src/Chap36/QuickSortMtEphSlice.rs:676:68
    |
676 |             let Pair(sorted_left, sorted_right) = crate::ParaPair!(f1, f2);
    |                                                                    ^^ `T` cannot be shared between threads safely
    |
   ::: src/ParaPairs.rs:105:9
    |
105 |         $crate::ParaPairs::ParaPairs::para_pair($f1, $f2)
    |         --------------------------------------- required by a bound introduced by this call
    |
note: required because it appears within the type `std::marker::PhantomData<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/marker.rs:819:11
note: required because it appears within the type `alloc::raw_vec::RawVec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/raw_vec/mod.rs:73:18
note: required because it appears within the type `std::vec::Vec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/vec/mod.rs:440:11
    = note: required for `std::sync::Arc<std::vec::Vec<T>>` to implement `std::marker::Send`
note: required because it appears within the type `Chap19::ArraySeqMtEphSlice::ArraySeqMtEphSlice::ArraySeqMtEphSliceS<T>`
   --> src/Chap19/ArraySeqMtEphSlice.rs:53:16
    |
 53 |     pub struct ArraySeqMtEphSliceS<T> {
    |                ^^^^^^^^^^^^^^^^^^^
note: required because it's used within this closure
   --> src/Chap36/QuickSortMtEphSlice.rs:652:22
    |
652 |             let f1 = move || -> (r: Vec<T>)
    |                      ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ParaPairs::ParaPairs::para_pair`
   --> src/ParaPairs.rs:61:33
    |
 59 |     pub fn para_pair<A, B, F1, F2>(f1: F1, f2: F2) -> (pair: Pair<A, B>)
    |            --------- required by a bound in this function
 60 |         where
 61 |             F1: FnOnce() -> A + Send + 'static,
    |                                 ^^^^ required by this bound in `para_pair`
help: consider further restricting type parameter `T` with trait `Sync`
    |
278 |     impl<T: TotalOrder + Eq + Clone + Send + 'static + std::marker::Sync> QuickSortMtEphSliceTrait<T>
    |                                                      +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> src/Chap36/QuickSortMtEphSlice.rs:809:68
    |
809 |             let Pair(sorted_left, sorted_right) = crate::ParaPair!(f1, f2);
    |                                                                    ^^ `T` cannot be shared between threads safely
    |
   ::: src/ParaPairs.rs:105:9
    |
105 |         $crate::ParaPairs::ParaPairs::para_pair($f1, $f2)
    |         --------------------------------------- required by a bound introduced by this call
    |
note: required because it appears within the type `std::marker::PhantomData<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/marker.rs:819:11
note: required because it appears within the type `alloc::raw_vec::RawVec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/raw_vec/mod.rs:73:18
note: required because it appears within the type `std::vec::Vec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/vec/mod.rs:440:11
    = note: required for `std::sync::Arc<std::vec::Vec<T>>` to implement `std::marker::Send`
note: required because it appears within the type `Chap19::ArraySeqMtEphSlice::ArraySeqMtEphSlice::ArraySeqMtEphSliceS<T>`
   --> src/Chap19/ArraySeqMtEphSlice.rs:53:16
    |
 53 |     pub struct ArraySeqMtEphSliceS<T> {
    |                ^^^^^^^^^^^^^^^^^^^
note: required because it's used within this closure
   --> src/Chap36/QuickSortMtEphSlice.rs:785:22
    |
785 |             let f1 = move || -> (r: Vec<T>)
    |                      ^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `ParaPairs::ParaPairs::para_pair`
   --> src/ParaPairs.rs:61:33
    |
 59 |     pub fn para_pair<A, B, F1, F2>(f1: F1, f2: F2) -> (pair: Pair<A, B>)
    |            --------- required by a bound in this function
 60 |         where
 61 |             F1: FnOnce() -> A + Send + 'static,
    |                                 ^^^^ required by this bound in `para_pair`
help: consider further restricting type parameter `T` with trait `Sync`
    |
278 |     impl<T: TotalOrder + Eq + Clone + Send + 'static + std::marker::Sync> QuickSortMtEphSliceTrait<T>
    |                                                      +++++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 23056MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
